--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     // Navigation
     def nav_version = "2.1.0-alpha02"
@@ -62,6 +63,7 @@ dependencies {
     // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
 
     // Dagger 2
     def dagger_version = "2.16"
@@ -83,7 +85,7 @@ dependencies {
     testImplementation 'androidx.test.ext:junit:1.1.0'
     testImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    testImplementation 'org.mockito:mockito-core:2.25.0'
+    testImplementation 'org.mockito:mockito-inline:2.25.0'
 
     debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha07'
 
