--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test.ext:junit:1.1.0'
     testImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 
     testImplementation 'org.mockito:mockito-inline:2.25.0'
 
