Add parcelable and bundle saving for the selected competition

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,10 @@ android {
     }
 }
 
+androidExtensions {
+    experimental = true
+}
+
 tasks.withType(Test) {
     jacoco.includeNoLocationClasses = true
 }
