--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,18 @@ android {
             includeAndroidResources = true
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 androidExtensions {
     experimental = true
+}
+
+kapt {
+    correctErrorTypes = true
 }
 
 tasks.withType(Test) {
@@ -79,6 +87,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha01'
 
     // Navigation
     def nav_version = "2.1.0-alpha04"
@@ -110,6 +119,14 @@ dependencies {
     def glide_version = "4.9.0"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    // Auto-factory
+    def auto_factory_version = "1.0-beta6"
+    implementation ("com.google.auto.factory:auto-factory:$auto_factory_version") {
+        exclude module: 'guava'
+    }
+    annotationProcessor "com.google.auto.factory:auto-factory:$auto_factory_version"
+    kapt "com.google.auto.factory:auto-factory:$auto_factory_version"
 
     // Test
     testImplementation 'junit:junit:4.12'
